--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   proxy:
-    image: jwilder/nginx-proxy:alpine
+    build: ./proxy
     container_name: nginx-proxy
     restart: always
     ports:
