--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,46 @@
 version: '3'
 
 services:
+  db:
+    image: mariadb
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
+    restart: always
+    volumes:
+      - db:/var/lib/mysql
+    environment:
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+    env_file:
+      - db.env
+
+  app:
+    image: nextcloud:fpm-alpine
+    restart: always
+    volumes:
+      - nextcloud:/var/www/html
+    environment:
+      - MYSQL_HOST=db
+    env_file:
+      - db.env
+    depends_on:
+      - db
+
+  web:
+    build: ./web
+    restart: always
+    volumes:
+      - nextcloud:/var/www/html:ro
+    environment:
+      - VIRTUAL_HOST=
+      - LETSENCRYPT_HOST=
+      - LETSENCRYPT_EMAIL=
+    depends_on:
+      - app
+    networks:
+      - proxy-tier
+      - default
+
   proxy:
     build: ./proxy
-    container_name: nginx-proxy
     restart: always
     ports:
       - 80:80
@@ -20,7 +57,6 @@ services:
 
   letsencrypt-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: nginx_proxy_letsencrypt
     restart: always
     volumes:
       - certs:/etc/nginx/certs
@@ -33,11 +69,11 @@ services:
       - proxy
 
 volumes:
+  db:
+  nextcloud:
   certs:
   vhost.d:
   html:
 
 networks:
   proxy-tier:
-    external:
-      name: nginx-proxy
